<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrabble1"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="504dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="83dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="321dp"
            android:layout_height="61dp"
            android:layout_marginStart="82dp"
            android:layout_marginLeft="82dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="82dp"
            android:layout_marginRight="82dp"
            android:background="#56000000"
            android:text="@string/txtTitle"
            android:textColor="#FCFBFB"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.191" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:background="#57000000"
            android:text="@string/txtHighscore"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="@id/txtScoreDisplay"
            app:layout_constraintHorizontal_bias="2"
            app:layout_constraintStart_toStartOf="@id/txtScoreDisplay"
            app:layout_constraintTop_toBottomOf="@id/btnStart"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/txtScoreDisplay"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:background="#56000000"
            android:textAlignment="center"
            android:textColor="#FFFDFD"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.533" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="199dp"
            android:layout_height="69dp"
            android:layout_marginTop="100dp"
            android:text="@string/btnStart"
            app:layout_constraintEnd_toEndOf="@id/txtScoreDisplay"
            app:layout_constraintHorizontal_bias="2"
            app:layout_constraintStart_toStartOf="@id/txtScoreDisplay"
            app:layout_constraintTop_toTopOf="@id/txtScoreDisplay" />

    </LinearLayout>

</RelativeLayout>